--- a/src/Language/en-US.json
+++ b/src/Language/en-US.json
@@ -5,5 +5,6 @@
     "articles.update.title": "Edit article",
     "app.english": "English",
     "fr": "French",
-    "twenty": "I go to school"
+    "twenty": "I go to school",
+    "featured.product": "Featured Produit"
   }
